# design-patterns-single-cpp

./: AbstractFactory.cpp  CMakeLists.txt  FactoryMethod.cpp
